<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo_avion">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt_login_bienvenida"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/jua"
        android:text="@string/lbl_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/campo_ingresar"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/textView_email"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/lbl_contrasena"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView_password">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/campo_ingresar"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/boton_celeste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/azul"
        android:fontFamily="@font/jua"
        android:text="Login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textView_ultimos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="Olvidaste tu contraseña?"
        android:textColor="@color/azultexto"
        app:layout_constraintTop_toBottomOf="@id/textInput_password"
        app:layout_constraintEnd_toEndOf="@id/textView2" />

    <TextView
        android:id="@+id/textView_ultimos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="Crear una nueva cuenta"
        android:textColor="@color/azultexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>